[package]
name = "termchatty"
version = "0.1.0"
edition = "2021"


[dependencies]
crossterm = "0.17"
tui = {version = "0.12", default-features = false, features = ['crossterm']}# See more keys and their definitions at https://doc.rust-lang.o, default-features = false, features = ['crossterm'] }
message-io = "0.14"
